--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.viveksinghspringsecurity</groupId>
-	<artifactId>springsecsection12</artifactId>
+	<artifactId>springsecsection16</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springsecsection12</name>
+	<name>springsecsection16</name>
 	<description>Demo project for Spring Boot and spring security</description>
 	<url/>
 	<licenses>
@@ -37,6 +37,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -88,19 +92,12 @@
 		</dependency>
         <dependency>
             <groupId>com.viveksinghspringsecurity</groupId>
-            <artifactId>springsecsection12</artifactId>
+            <artifactId>springsecsection16</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+
 <!--	<build>-->
 <!--		<plugins>-->
 <!--			<plugin>-->
