--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.jpa.show-sql = true
 
 logging.pattern.console= ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 server.servlet.session.timeout = ${SESSION_TIMEOUT:10m}
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWK_SET_URI:http://localhost:8180/realms/easybankdev/protocol/openid-connect/certs}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWK_SET_URI:http://localhost:9000/oauth2/jwks}
+#spring.security.oauth2.resourceserver.opaque.introspection-uri= ${INTROSPECT_URI:http://localhost:8180/realms/easybankdev/protocol/openid-connect/token/introspect}
+#spring.security.oauth2.resourceserver.opaque.introspection-client-id=${INTROSPECT_ID:easybankintrospect}
+#spring.security.oauth2.resourceserver.opaque.introspection-client-secret=${INTROSPECT_SECRET:wjkJGGwjCNyCXwDatAzGlFcMa602JkBF}
