--- a/src/main/resources/application_prod.properties
+++ b/src/main/resources/application_prod.properties
@@ -15,3 +15,5 @@ spring.jpa.show-sql = false
 logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
 logging.pattern.console= ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 server.servlet.session.timeout= ${SESSION_TIMEOUT:2m}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWK_SET_URI:http://localhost:9000/oauth2/jwks}
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWK_SET_URI:http://localhost:8180/realms/easybankdev/protocol/openid-connect/certs}
